Using Java9 and bumping to API29
Bumping to NDK r20 and Bazel 0.28.0